--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,10 @@
 rootProject.name = 'springboot-https-template'
+include 'springboot-https-template-app'
+include 'springboot-https-template-core'
+include 'springboot-https-template-domain'
+include 'springboot-https-template-infrastructure'
+include 'springboot-https-template-persistence'
+include 'springboot-https-template-local'
+include 'springboot-https-template-production'
+include 'springboot-https-template-uat'
+
