--- a/springboot-https-template-app/build.gradle
+++ b/springboot-https-template-app/build.gradle
@@ -4,30 +4,16 @@ plugins {
     id 'java'
 }
 
-group = 'com.patrikduch'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-subprojects {
-    repositories {
-        mavenCentral()
-    }
-}
+group 'com.patrikduch'
+version '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation project(":springboot-https-template-domain")
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
