Keystore path fix

--- a/springboot-https-template-app/src/main/resources/application.properties
+++ b/springboot-https-template-app/src/main/resources/application.properties
@@ -5,6 +5,6 @@ server.port=${httpsPort}
 
 # HTTPS setup
 server.ssl.enabled=true
-server.ssl.key-store=classpath:local-ssl.p12
+server.ssl.key-store=classpath:local_ssl.p12
 server.ssl.key-store-password=PatrikDuch
 server.ssl.key-store-type=PKCS12
